set up Mapper for DTO

--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.output.ansi.enabled=always
